--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <!-- Changed Title to Company Name -->
+    <title>Horiseon</title>
 </head>
 
 <body>
@@ -24,24 +25,29 @@
             </ul>
         </div>
     </div>
-    <div class="hero"></div>
+    <!-- Added TITLE text -->
+    <div class="hero" title="Collaboration Meeting"></div>
     <div class="content">
-        <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+        <!-- Changed from CLASS to ID for Navigation -->
+        <div id="search-engine-optimization">
+            <!-- Added ALT text-->
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Search Engine Optimization Conecpt"/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <!-- Added ALT text -->
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Reputation Bar Graph" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <!-- Added ALT text -->
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Social Media Aspects"/>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
