--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <!-- Changed Title to Company Name -->
+    <!-- Changed Title text to Company Name -->
     <title>Horiseon</title>
 </head>
 
 <body>
-    <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+    <!-- Changed DIV class="header" to <header> -->
+    <header>
+        <!-- Changed from SPAN to EM -->
+        <h1>Hori<em>seo</em>n</h1>
+        <!-- Changed DIV to <nav> -->
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -23,9 +26,10 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div>
+        </nav>
+    </header>
     <!-- Added TITLE text -->
+    <!-- May change this to Main / Figure / Figure Caption  -->
     <div class="hero" title="Collaboration Meeting"></div>
     <div class="content">
         <!-- Changed from CLASS to ID for Navigation -->
@@ -54,35 +58,41 @@
             </p>
         </div>
     </div>
-    <div class="benefits">
-        <div class="benefit-lead">
+    <!-- Changed DIV to <aside> -->
+    <aside class="benefits">
+        <!-- Changed DIVs to <section> -->
+        <!-- Changed CLASS to benefit-format -->
+        <secton class="benefit-format">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="Lead Generation Icon" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </section>
+        <!-- Changed CLASS to benefit-format -->
+        <section class="benefit-format">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="Brand Awareness Icon"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </section>
+        <!-- Changed CLASS to benefit-format -->
+        <section class="benefit-format">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
+            <img src="./assets/images/cost-management.png" alt="Cost Management Icon" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
-    </div>
-    <div class="footer">
+        </section>
+    </aside>
+    <!-- Changed DIV to <footer> -->
+    <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
