Added Comments for ALTs in HTML, Updated README to remove

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         <!-- Changed CLASS to benefit-format -->
         <secton class="benefit-format">
             <h3>Lead Generation</h3>
+            <!-- Added ALT text -->
             <img src="./assets/images/lead-generation.png" alt="Lead Generation Icon" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
@@ -72,6 +73,7 @@
         <!-- Changed CLASS to benefit-format -->
         <section class="benefit-format">
             <h3>Brand Awareness</h3>
+            <!-- Added ALT text -->
             <img src="./assets/images/brand-awareness.png" alt="Brand Awareness Icon"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
@@ -80,6 +82,7 @@
         <!-- Changed CLASS to benefit-format -->
         <section class="benefit-format">
             <h3>Cost Management</h3>
+            <!-- Added ALT text -->
             <img src="./assets/images/cost-management.png" alt="Cost Management Icon" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
