--- a/index.html
+++ b/index.html
@@ -31,38 +31,38 @@
     <!-- Added TITLE text -->
     <!-- May change this to Main / Figure / Figure Caption  -->
     <div class="hero" title="Collaboration Meeting"></div>
-    <div class="content">
+    <main class="content">
         <!-- Changed from CLASS to ID for Navigation -->
-        <div id="search-engine-optimization">
+        <article id="search-engine-optimization" class="articleFormat">
             <!-- Added ALT text-->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Search Engine Optimization Conecpt"/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
+        </article>
+        <article id="online-reputation-management" class="articleFormat">
             <!-- Added ALT text -->
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Reputation Bar Graph" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
+        </article>
+        <article id="social-media-marketing" class="articleFormat">
             <!-- Added ALT text -->
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Social Media Aspects"/>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
-    </div>
+        </article>
+    </main>
     <!-- Changed DIV to <aside> -->
     <aside class="benefits">
         <!-- Changed DIVs to <section> -->
         <!-- Changed CLASS to benefit-format -->
-        <secton class="benefit-format">
+        <secton class="benefitFormat">
             <h3>Lead Generation</h3>
             <!-- Added ALT text -->
             <img src="./assets/images/lead-generation.png" alt="Lead Generation Icon" />
@@ -71,7 +71,7 @@
             </p>
         </section>
         <!-- Changed CLASS to benefit-format -->
-        <section class="benefit-format">
+        <section class="benefitFormat">
             <h3>Brand Awareness</h3>
             <!-- Added ALT text -->
             <img src="./assets/images/brand-awareness.png" alt="Brand Awareness Icon"/>
@@ -80,7 +80,7 @@
             </p>
         </section>
         <!-- Changed CLASS to benefit-format -->
-        <section class="benefit-format">
+        <section class="benefitFormat">
             <h3>Cost Management</h3>
             <!-- Added ALT text -->
             <img src="./assets/images/cost-management.png" alt="Cost Management Icon" />
