Changed DIV to Section

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </nav>
     </header>
     <!-- Added TITLE text -->
-    <!-- May change this to Main / Figure / Figure Caption  -->
-    <div class="hero" title="Collaboration Meeting"></div>
+    <!-- Changed DIV to <section>  -->
+    <section class="hero" title="Collaboration Meeting Picture"></section>
     <main class="content">
         <!-- Changed from CLASS to ID for Navigation -->
         <article id="search-engine-optimization" class="articleFormat">
