--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <!-- Changed Title text to Company Name -->
-    <title>Horiseon</title>
+    <title>Horiseon | Social Solution Services</title>
 </head>
 
 <body>
