Reverted change of SPAN to EM

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
     <!-- Changed DIV class="header" to <header> -->
     <header>
-        <!-- Changed from SPAN to EM -->
-        <h1>Hori<em>seo</em>n</h1>
+        <h1>Hori<span class="seo">seo</span>n</h1>
         <!-- Changed DIV to <nav> -->
         <nav>
             <ul>
