--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
     <!-- Changed DIV to <section>  -->
     <section class="hero" title="Collaboration Meeting Picture"></section>
     <main class="content">
-        <!-- Changed from CLASS to ID for Navigation -->
-        <article id="search-engine-optimization" class="articleFormat">
+        <!-- Changed from fist CLASS to ID for Navigation -->
+        <!-- Removed CLASS -->
+        <article id="search-engine-optimization">
             <!-- Added ALT text-->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Search Engine Optimization Conecpt"/>
             <h2>Search Engine Optimization</h2>
@@ -40,7 +41,7 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </article>
-        <article id="online-reputation-management" class="articleFormat">
+        <article id="online-reputation-management">
             <!-- Added ALT text -->
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Reputation Bar Graph" />
             <h2>Online Reputation Management</h2>
@@ -48,7 +49,7 @@
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </article>
-        <article id="social-media-marketing" class="articleFormat">
+        <article id="social-media-marketing">
             <!-- Added ALT text -->
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Social Media Aspects"/>
             <h2>Social Media Marketing</h2>
