--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </article>
+        <!-- Removed CLASS -->
         <article id="online-reputation-management">
             <!-- Added ALT text -->
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Reputation Bar Graph" />
@@ -49,6 +50,7 @@
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </article>
+        <!-- Removed CLASS -->
         <article id="social-media-marketing">
             <!-- Added ALT text -->
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Social Media Aspects"/>
@@ -59,10 +61,11 @@
         </article>
     </main>
     <!-- Changed DIV to <aside> -->
-    <aside class="benefits">
+    <!-- Removed CLASS-->
+    <aside>
         <!-- Changed DIVs to <section> -->
-        <!-- Changed CLASS to benefit-format -->
-        <secton class="benefitFormat">
+        <!-- Removed CLASS-->
+        <section>
             <h3>Lead Generation</h3>
             <!-- Added ALT text -->
             <img src="./assets/images/lead-generation.png" alt="Lead Generation Icon" />
@@ -70,8 +73,8 @@
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
-        <!-- Changed CLASS to benefit-format -->
-        <section class="benefitFormat">
+        <!-- Removed CLASS-->
+        <section>
             <h3>Brand Awareness</h3>
             <!-- Added ALT text -->
             <img src="./assets/images/brand-awareness.png" alt="Brand Awareness Icon"/>
@@ -79,8 +82,8 @@
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
-        <!-- Changed CLASS to benefit-format -->
-        <section class="benefitFormat">
+        <!-- Removed CLASS-->
+        <section>
             <h3>Cost Management</h3>
             <!-- Added ALT text -->
             <img src="./assets/images/cost-management.png" alt="Cost Management Icon" />
