--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
         </section>
     </aside>
     <!-- Changed DIV to <footer> -->
-    <footer class="footer">
+    <!-- Removed CLASS -->
+    <footer>
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
