Fixed indentation, removed CLASS CONTENT to target MAIN element

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Added TITLE text -->
     <!-- Changed DIV to <section>  -->
     <section class="hero" title="Collaboration Meeting Picture"></section>
-    <main class="content">
+    <main>
         <!-- Changed from fist CLASS to ID for Navigation -->
         <!-- Removed CLASS -->
         <article id="search-engine-optimization">
